# 50.017-Graphics-And-Visualization

Assignment_0_code/: README.md
Assignment_0_code/Assignment_0_mac/: CMakeLists.txt
Assignment_0_code/Assignment_0_mac_cleaned/: CMakeLists.txt
Assignment_0_code/Assignment_0_mac_cleaned/src/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
Assignment_0_code/Assignment_0_win/: Assignment_0_win.filters  Assignment_0_win.sln  Assignment_0_win.vcxproj
Assignment_0_code/Assignment_0_win/Debug/: Assignment_0_win.exe.recipe  Assignment_0_win.ilk  Assignment_0_win.vcxproj.FileListAbsolute.txt  vc142.idb
Assignment_0_code/Assignment_0_win/src/: main.cpp
Assignment_1_code/Assignment_1_mac/: CMakeLists.txt  readme.md
Assignment_1_code/Assignment_1_mac/src/: main.cpp  vector3.h
Assignment_1_code/Assignment_1_win/: Assignment_1_win.vcxproj
Assignment_1_code/Assignment_1_win/src/: main.cpp
Assignment_1_code/__MACOSX/Assignment_1_mac/: ._CMakeLists.txt
Assignment_2_code/Assignment_2_mac/: CMakeLists.txt  README.md
Assignment_2_code/Assignment_2_mac/data/: Model1.skel  Model2.skel  Model3.skel  Model4.skel
Assignment_2_code/Assignment_2_mac/src/: Cylinder.cpp  Cylinder.h  Joint.h  MatrixStack.cpp  MatrixStack.h  SkeletalModel.cpp  SkeletalModel.h  Sphere.cpp  Sphere.h  main.cpp  shader.h  shaderSource.h
Assignment_2_code/__MACOSX/Assignment_2_mac/: ._CMakeLists.txt
Assignment_3_code/Assignment_3_mac/: README.md
Assignment_4_code/Assignment_4_mac/: CMakeLists.txt  README.md  script.txt
Assignment_4_code/Assignment_4_mac/data/: scene02_cube.txt  scene04_axes.txt  scene05_bunny_1k.txt
Assignment_4_code/Assignment_4_mac/src/: Camera.h  Group.h  Hit.h  Image.cpp  Image.h  Light.h  Material.h  Mesh.cpp  Mesh.hpp  Object3D.h  Plane.h  Ray.h  SceneParser.cpp  SceneParser.h  Sphere.h  Transform.h  Triangle.h  VecUtils.h  main.cpp  texture.cpp  texture.hpp  vecmath.h
(+46 files in other folders)
